force-app/main/default/objects/Position__c/fields/Average_Pay__c.field-meta.xml
<CustomField>
    <fullName>Average_Pay__c</fullName>
    <formula>(Max_Pay__c + Min_Pay__c)/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>