force-app/main/default/objects/Position__c/fields/Educational_requirements__c.field-meta.xml
<CustomField>
    <fullName>Educational_requirements__c</fullName>
    <defaultValue>(&quot;Basic degree from recognized university&quot;)</defaultValue>
    <label>Educational requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>