force-app/main/default/objects/Position__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Functional_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FN-1</fullName>
            </value>
            <value>
                <fullName>FN-2</fullName>
            </value>
            <value>
                <fullName>FN-3</fullName>
            </value>
            <value>
                <fullName>FN-4</fullName>
            </value>
            <value>
                <fullName>FN-5</fullName>
            </value>
            <value>
                <fullName>HR-1</fullName>
            </value>
            <value>
                <fullName>HR-2</fullName>
            </value>
            <value>
                <fullName>HR-3</fullName>
            </value>
            <value>
                <fullName>HR-4</fullName>
            </value>
            <value>
                <fullName>IT-1</fullName>
            </value>
            <value>
                <fullName>IT-2</fullName>
            </value>
            <value>
                <fullName>IT-3</fullName>
            </value>
            <value>
                <fullName>IT-4</fullName>
            </value>
            <value>
                <fullName>IT-5</fullName>
            </value>
            <value>
                <fullName>RO-1</fullName>
            </value>
            <value>
                <fullName>RO-2</fullName>
            </value>
            <value>
                <fullName>WH-1</fullName>
            </value>
            <value>
                <fullName>WH-2</fullName>
            </value>
            <value>
                <fullName>WH-3</fullName>
            </value>
            <value>
                <fullName>WH-4</fullName>
            </value>
            <value>
                <fullName>WH-5</fullName>
            </value>
            <value>
                <fullName>MC-1</fullName>
            </value>
            <value>
                <fullName>MC-2</fullName>
            </value>
            <value>
                <fullName>MC-3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>