force-app/main/default/objects/Position__c/fields/Min_Pay__c.field-meta.xml
<CustomField>
    <fullName>Min_Pay__c</fullName>
    <label>Min Pay</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>