force-app/main/default/objects/Position__c/fields/No_Of_Vaccancies__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Vaccancies__c</fullName>
    <label>No Of Vaccancies`</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>