force-app/main/default/objects/Position__c/fields/Position_Age__c.field-meta.xml
<CustomField>
    <fullName>Position_Age__c</fullName>
    <formula>IF(  Days__c &gt; 30,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),
IF(  Days__c  &lt; 20,
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30),
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Age</label>
    <type>Text</type>
</CustomField>