force-app/main/default/objects/Position__c/fields/Python__c.field-meta.xml
<CustomField>
    <fullName>Python__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Python</label>
    <type>Checkbox</type>
</CustomField>