force-app/main/default/objects/Position__c/fields/UpdateDetails__c.field-meta.xml
<CustomField>
    <fullName>UpdateDetails__c</fullName>
    <label>UpdateDetails</label>
    <length>40</length>
    <type>Text</type>
</CustomField>