force-app/main/default/objects/Position__c/recordTypes/IT_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>IT_Record_Type</fullName>
    <active>true</active>
    <label>IT Record Type</label>
</RecordType>