force-app/main/default/objects/Position__c/recordTypes/Non_It_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Non_It_Record_Type</fullName>
    <active>true</active>
    <label>Non It Record Type</label>
</RecordType>