force-app/main/default/objects/Position__c/validationRules/Closed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date</fullName>
    <active>false</active>
    <errorConditionFormula>(
  ISBLANK( Close_Date__c  ) 
  &amp;&amp;   
  (
   ISPICKVAL( Status__c , &quot;Closed-Filled&quot;) 
     || 
    ISPICKVAL( Status__c , &quot;Closed-Not Approved&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>Closed date must be mentioned when the status is closed filled or closed not approved</errorMessage>
</ValidationRule>