force-app/main/default/objects/Position__c/validationRules/Closed_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>Close_Date__c &lt; Open_Date__c</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>Closed date must be greater than or equal to  open date</errorMessage>
</ValidationRule>