force-app/main/default/objects/Position__c/validationRules/Minimum_Pay.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Pay</fullName>
    <active>false</active>
    <errorConditionFormula>Min_Pay__c &gt; Max_Pay__c</errorConditionFormula>
    <errorDisplayField>Min_Pay__c</errorDisplayField>
    <errorMessage>Minimum pay should be less than maximum pay</errorMessage>
</ValidationRule>