force-app/main/default/objects/Position__c/validationRules/Open_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Open_Date__c &lt;&gt;  Today()</errorConditionFormula>
    <errorDisplayField>Open_Date__c</errorDisplayField>
    <errorMessage>Date must be  equal to  todays date</errorMessage>
</ValidationRule>