force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Location__c</columns>
    <columns>NAME</columns>
    <columns>Functional_Area__c</columns>
    <columns>Max_Pay__c</columns>
    <columns>Min_Pay__c</columns>
    <columns>Position_Age__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>