force-app/main/default/objects/Position__c/listViews/BayArea.listView-meta.xml
<ListView>
    <fullName>BayArea</fullName>
    <columns>NAME</columns>
    <columns>Functional_Area__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>BayArea</label>
</ListView>