force-app/main/default/objects/Position__c/listViews/IT.listView-meta.xml
<ListView>
    <fullName>IT</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Functional_Area__c</field>
        <operation>equals</operation>
        <value>Information Technology</value>
    </filters>
    <label>List Positions</label>
</ListView>