force-app/main/default/objects/Position__c/listViews/Non_IT.listView-meta.xml
<ListView>
    <fullName>Non_IT</fullName>
    <columns>NAME</columns>
    <columns>Position_Age__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Functional_Area__c</field>
        <operation>equals</operation>
        <value>Retail Operations,Ware Housing,Miscellaneous</value>
    </filters>
    <label>Non IT</label>
</ListView>