force-app/main/default/objects/Position__c/listViews/Open_Approved_Positions.listView-meta.xml
<ListView>
    <fullName>Open_Approved_Positions</fullName>
    <columns>NAME</columns>
    <columns>Min_Pay__c</columns>
    <columns>Max_Pay__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Functional_Area__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open-Approved</value>
    </filters>
    <label>Open Approved Positions</label>
</ListView>