force-app/main/default/objects/Position__c/listViews/SanFransico.listView-meta.xml
<ListView>
    <fullName>SanFransico</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>SanFransico</label>
</ListView>