force-app/main/default/objects/Position__c/listViews/Unclaimed_Position_Position.listView-meta.xml
<ListView>
    <fullName>Unclaimed_Position_Position</fullName>
    <filterScope>Queue</filterScope>
    <label>Unclaimed Position</label>
    <queue>Unclaimed_Position</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>